tests/compile_fail/defined_orphan_ext.out
In file included from tests/compile_fail/defined_orphan_ext.cpp:17:
src/lguim/secureenumconverter.inc:20:6: error: #error "SEC_ORPHAN_EXT defined before including secureenumconverter.inc"
     #error "SEC_ORPHAN_EXT defined before including secureenumconverter.inc"
      ^~~~~
compilation terminated due to -Wfatal-errors.
